Worked on correctly icon alignment

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -12,7 +12,7 @@
 }
 
 .Weather h1 {
-  color: #878787;
+  color: #6d6d6d;
   margin: 20px 0 0 0;
 }
 
